--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,7 @@ section {
 
 .yellow {
   width: 50%;
+  opacity: 0;
 }
 
 .left p {
@@ -36,7 +37,7 @@ section {
   right: 17%;
   color: black;
   padding: 1em;
-  border-radius: 15px;
+  border-radius: 5px;
   width: 20vw;
   text-align: left;
 }
@@ -60,4 +61,19 @@ section {
 
 .righ p {
   line-height: 1.6em;
+}
+
+.anim {
+  opacity: 0;
+}
+
+@keyframes anim1 {
+  from {
+    transform: translateY(-100px);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
 }
