--- a/css/main.css
+++ b/css/main.css
@@ -44,9 +44,12 @@ section {
 
 .wave {
   position: absolute;
-  margin-top: 32%;
-  left: 19%;
-  width: 8vw;
+  background: #c19869;
+  margin-top: 30%;
+  left: 10%;
+  width: 330px;
+  height: 500px;
+  z-index: -1;
 }
 
 .right {
@@ -56,7 +59,8 @@ section {
 
 .right h2 {
   color: white;
-  font-size: 1.7;
+  font-size: 2em;
+  font-weight: lighter;
 }
 
 .righ p {
